Define makeCoffee() to display a sequence of images on click.

--- a/coffee.html
+++ b/coffee.html
@@ -48,7 +48,9 @@
 
     // Set these variables to their DOM elements
 
-    let coffeeImage;
+    let coffeeImage = document.querySelector('#coffee-image')
+    coffeeImage.setAttribute('src', 'static/coffee_beans.jpg');
+
     let revenueMessage;
 
     // use this JavaScript object in further study step
@@ -59,6 +61,16 @@
         "latte": 4.15,
         "hot chocolate": 2.50
     };
+
+    coffeeImage.addEventListener('click', makeCoffee);
+
+    function makeCoffee() {
+        // coffeeImage = document.querySelector('#coffee-image').setAttribute('src', 'static/coffee_mug.jpg')
+        coffeeImage.setAttribute('src', 'static/coffee_machine.jpg');
+
+        setTimeout(function(){ coffeeImage.setAttribute('src', 'static/coffee_mug.jpg') }, 1500);
+        setTimeout(function(){coffeeImage.setAttribute('src', 'static/coffee_beans.jpg')}, 4000);
+    }
 
 
 </script>
