Commit changes to a new branch!

--- a/coffee.html
+++ b/coffee.html
@@ -68,10 +68,11 @@
         // coffeeImage = document.querySelector('#coffee-image').setAttribute('src', 'static/coffee_mug.jpg')
         coffeeImage.setAttribute('src', 'static/coffee_machine.jpg');
 
-        setTimeout(function(){ coffeeImage.setAttribute('src', 'static/coffee_mug.jpg') }, 1500);
+        setTimeout(function(){coffeeImage.setAttribute('src', 'static/coffee_mug.jpg') }, 1500);
         setTimeout(function(){coffeeImage.setAttribute('src', 'static/coffee_beans.jpg')}, 4000);
     }
 
+// Here's a new version on a new branch!
 
 </script>
 
