--- a/coffee.html
+++ b/coffee.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway" >
     <!-- Our CSS -->
     <link rel="stylesheet" href="static/coffee.css">
+
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+
 </head>
 <body>
 <div class="container">
@@ -76,8 +82,8 @@
 
 
         coffeeImage.attr('src', 'static/coffee_machine.jpg');
-        setTimeout(function(){ coffeeImage.attr('src', 'static/coffee_mug.jpg') }, 1500);
-        setTimeout(function(){coffeeImage.setAttribute('src', 'static/coffee_beans.jpg')}, 4000);
+        setTimeout(function(){coffeeImage.attr('src', 'static/coffee_mug.jpg')}, 1500);
+        setTimeout(function(){coffeeImage.attr('src', 'static/coffee_beans.jpg')}, 4000);
 
     }
 
